manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default
spec:
  selector:
    app: api-service
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
